# chrome-native-messaging

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: errors.rs  lib.rs
tests/: test_payload_length.rs
