[package]
authors = ["Chris Chamberlain <c.chamberlain@iinet.net.au>"]
name = "chrome_native_messaging"
keywords = ["chrome", "native", "messaging", "host", "protocol"]
description = "Implementation of Chrome's Native Messaging protocol"
version = "0.1.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neon64/chrome-native-messaging"

[dependencies]
byteorder = "1.0.0"
error-chain = "0.11.0"
serde_json = "~1.0.2"

[dev-dependencies]
serde = "~1.0.24"
serde_derive = "~1.0.24"