[package]
authors = ["Chris Chamberlain <chris@chamberlain.id.au>"]
name = "chrome_native_messaging"
keywords = ["chrome", "native", "messaging", "host", "protocol"]
description = "Implementation of Chrome's Native Messaging protocol"
version = "0.3.0"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neon64/chrome-native-messaging"

[dependencies]
serde_json = "1.0.61"
serde = { version = "1.0.118", features = ["derive"] }
